<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.onboarding.MainActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/onboardingViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:transitionName="splash"
            android:background="@drawable/view_pager_background"
            app:layout_constraintBottom_toTopOf="@+id/viewCenterOfNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/indicatorContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/skipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/icon_outer_background"
            app:layout_constraintBottom_toBottomOf="@+id/nextImageView"
            app:layout_constraintEnd_toEndOf="@+id/nextImageView"
            app:layout_constraintStart_toStartOf="@+id/nextImageView"
            app:layout_constraintTop_toTopOf="@+id/nextImageView" />

        <View
            android:id="@+id/viewCenterOfNext"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/nextImageView"
            app:layout_constraintEnd_toEndOf="@+id/nextImageView"
            app:layout_constraintStart_toStartOf="@+id/nextImageView"
            app:layout_constraintTop_toTopOf="@+id/nextImageView" />

        <ImageView
            android:id="@+id/nextImageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toTopOf="@+id/getStartBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/backgroundColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/secondaryColor"
            android:layout_marginBottom="50dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/get_start"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>